# sage

./: .gitignore  docker-compose.yml  pyproject.toml  run.bat  run.sh
config/: .example.env  baseurl.json  component.example.json  model.example.json  user.json
docs/knowledge/: 1-新手入门与核心机制​.txt  2-神庙与试炼​.txt  3-装备与收集品​.txt  4-神兽与主线流程​.txt  5-高级技巧与冷知识​.txt  6-DLC 内容摘要​.txt
sage/: __main__.py
sage/api/: main.py
sage/complex/config/: base_settings.py  inventory.py  settings.py
sage/complex/response/: exception.py  result.py
sage/components/: inventory.py
sage/components/embeddings/: embedding_factory.py  openai.py  qwen.py
sage/components/llms/: deepseek.py  llm_factory.py  openai.py  qwen.py
sage/components/manager/: elasticsearch.py  mysql.py  redis.py
sage/components/memory/: elasticsearch.py  redis.py
sage/components/vector/: elasticsearch.py  pinecone.py
sage/function/complex/: bench.py
sage/function/langgraph/: 1.1_simple-graph.py  quickstart.py
sage/function/langgraph/module-1/: 1.2_chain.py  1.3_router.py  1.4_agent.py  1.5_agent-memory.py
sage/function/langgraph/module-2/: 2.1_state-schema.py  2.2_state-reducers.py  2.4_trim-filter-messages.py  2.5_chatbot-summarization.py
