[tool.poetry]
name = "sage"
version = "1.0.0"
description = ""
authors = ["archer <h96599021@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
loguru = "^0.7.3"
fastapi = {extras = ["all"], version = "^0.116.1"}
python-dotenv = "^1.1.1"
pymysql = "^1.1.2"
dbutils = "^3.1.2"
pyyaml = "^6.0.2"
requests = "^2.32.5"
langgraph = "^0.6.7"
langchain = {extras = ["openai"], version = "^0.3.27"}
langchain-qwq = "^0.2.1"
langchain-openai = "^0.3.33"
langchain-deepseek = "^0.1.4"
langchain-community = "^0.3.29"
langchain-elasticsearch = "^0.3.2"
langchain-pinecone = "^0.2.12"
langchain-redis = "^0.2.3"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '.+/(dist|.venv|venv|build)/.+'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*
'''
